--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,17 @@
 {
-  "version": "0.0.1",
-  "configurations": [
-  ]
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Start Application",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "main.py",
+            "console": "internalConsole",
+            "justMyCode": true,
+            "preLaunchTask": "aaa"
+        }
+    ]
 }
